# roadgraph_builder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/: ABOUT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  showcase.yml
.github/workflows/: bench.yml  ci.yml  city-bench.yml  pypi.yml  release.yml
docs/: ARCHITECTURE.md  LAUNCH.md  PLAN.md  ROADMAP_0.5.md  ROADMAP_0.6.md  ROADMAP_0.7.md  SHOWCASE.md  accuracy_report.md  benchmarks.md  bundle_tuning.md  camera_pipeline_demo.md  diagram.html  float32_drift_report.md  index.html  map.html  memory_profile_v0.7.md  navigation_turn_restrictions.md  route_diagnostics_preview.html
docs/assets/: ATTRIBUTION.md  benchmark_baseline_0.7.2-dev.json  berlin_mitte_origin.json  berlin_mitte_turn_restrictions.json  map_berlin_mitte.geojson  map_berlin_mitte_lanelet_summary.json  map_match_explain_sample.json  map_osm.geojson  map_paris.geojson  map_paris_grid.geojson  map_paris_grid.lanelet.osm  map_paris_grid_lanelet_summary.json  map_sf_north_beach_lanelet_summary.json  map_tokyo_ginza.geojson  map_tokyo_ginza.lanelet.osm  map_tokyo_ginza_lanelet_summary.json  map_toy.geojson  osm_graph.json  osm_origin.json  osm_wgs84.csv  paris_grid_camera_detections.json  paris_grid_turn_restrictions.json  reachable_berlin_mitte.geojson  reachable_paris_grid.geojson  reachable_sf_north_beach.geojson  reachable_tokyo_ginza.geojson  route_berlin_mitte.geojson  route_explain_sample.json  route_paris.geojson  route_paris_grid.geojson  route_sf_north_beach.geojson  route_tokyo_ginza.geojson  sample_graph.json  sf_north_beach_camera_detections.json  sf_north_beach_origin.json  sf_north_beach_turn_restrictions.json  site.json  tokyo_ginza_camera_detections.json  tokyo_ginza_origin.json  tokyo_ginza_turn_restrictions.json  (+2 more)
docs/css/: viewer.css
docs/handoff/: float32_trajectory.md  release_distribution.md  turn_restrictions.md
docs/js/: map_console.js  route_diagnostics.js  viewer.js
examples/: camera_calibration_sample.json  camera_detections_sample.json  demo_camera_calibration.json  demo_image_detections.json  image_detections_sample.json  osm_public_trackpoints.csv  sample_lidar.las  sample_lidar_points.csv  sample_trajectory.csv  turn_restrictions_sample.json
examples/frozen_bundle/: README.md  README.txt  manifest.json
roadgraph_builder/: __init__.py
roadgraph_builder/cli/: build.py  camera.py  dataset.py  doctor.py  export.py  guidance.py  hd.py  incremental.py  lidar.py  main.py  osm.py  routing.py  trajectory.py  validate.py
roadgraph_builder/core/: __init__.py
roadgraph_builder/hd/: __init__.py  boundaries.py  lane_inference.py  lidar_fusion.py  pipeline.py  refinement.py
roadgraph_builder/io/: __init__.py
roadgraph_builder/navigation/: __init__.py  guidance.py  sd_maneuvers.py  turn_restrictions.py
roadgraph_builder/pipeline/: __init__.py  build_graph.py  crossing_splitters.py  incremental.py  junction_topology.py
roadgraph_builder/routing/: __init__.py  _core.py  edge_index.py  geojson_export.py  hmm_match.py  map_match.py  nearest.py  reachability.py  shortest_path.py  trip_reconstruction.py
roadgraph_builder/schemas/: __init__.py  camera_detections.schema.json  guidance.schema.json  lane_markings.schema.json  manifest.schema.json  road_graph.schema.json  sd_nav.schema.json  turn_restrictions.schema.json
roadgraph_builder/semantics/: __init__.py  road_class.py  signals.py  trace_fusion.py
roadgraph_builder/utils/: __init__.py  geo.py  geometry.py
roadgraph_builder/validation/: __init__.py  camera_detections.py  guidance.py  json_schema.py  lane_markings.py  manifest.py  sd_nav.py  turn_restrictions.py
roadgraph_builder/viz/: __init__.py  svg_export.py
scripts/: build_release_bundle.sh  compare_float32_drift.py  fetch_node_elevations.py  fetch_osm_highways.py  fetch_osm_regulatory_nodes.py  fetch_osm_trackpoints.py  fetch_osm_turn_restrictions.py  generate_camera_demo.py  make_sample_lane_las.py  make_sample_las.py  measure_lane_accuracy.py  profile_memory.py  record_map_console_hero.py  refresh_docs_assets.py  render_map_console_screenshot.py  render_route_diagnostics_screenshot.py  run_benchmarks.py  run_demo_bundle.sh  run_tuning_bundle.sh
scripts/completions/: _roadgraph_builder  roadgraph_builder.bash
tests/: conftest.py  test_accuracy_measure_synthetic.py  test_attribution.py  test_benchmark_script.py  test_boundaries_miter.py  test_build_3d_roundtrip.py  test_bundle_export.py  test_camera_demo_roundtrip.py  test_camera_detections.py  test_camera_distortion.py  test_camera_lane_detection_synthetic.py  test_camera_lane_to_edge_roundtrip.py  test_camera_projection.py  test_centerline_smoothing.py  test_city_scale.py  test_cli_build_validate.py  test_cli_camera.py  test_cli_end_to_end.py  test_cli_export.py  test_cli_hd.py  test_cli_incremental_dataset.py  test_cli_lidar.py  test_cli_osm_guidance.py  test_cli_routing.py  test_cli_trajectory.py  test_cli_version.py  test_crossing_split.py  test_crossing_splitters_byte_identical.py  test_crossing_splitters_perf.py  test_direction_observed.py  test_doctor.py  test_duplicate_edge_merge.py  test_empty_graph.py  test_export_lanelet2_per_lane.py  test_float32_drift_compare_script.py  test_fuse_lidar_3d.py  test_geo.py  test_geo_origin.py  test_geojson_map.py  test_geometry.py  (+75 more)
(+39 files in other folders)
